crates/moss/tests/snapshots/cli_snapshots__help_grammars_list.snap
---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 211
expression: "snapshot_help(&[\"grammars\", \"list\"])"
---
List installed grammars

Usage: moss grammars list [OPTIONS]

Options:
      --json       Output as JSON
      --jq <EXPR>  Filter JSON output with jq expression (implies --json)
      --pretty     Human-friendly output with colors and formatting
      --compact    Compact output without colors (overrides TTY detection)
  -h, --help       Print help
