crates/moss/tests/snapshots/cli_snapshots__help_package.snap
---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 97
expression: "snapshot_help(&[\"package\"])"
---
Package management: info, list, tree, outdated

Usage: moss package [OPTIONS] <COMMAND>

Commands:
  info      Query package info from registry
  list      List declared dependencies from manifest
  tree      Show dependency tree from lockfile
  why       Show why a dependency is in the tree
  outdated  Show outdated packages (installed vs latest)
  audit     Check for security vulnerabilities
  help      Print this message or the help of the given subcommand(s)

Options:
  -e, --ecosystem <ECOSYSTEM>  Force specific ecosystem (cargo, npm, python)
  -r, --root <ROOT>            Root directory (defaults to current directory)
      --json                   Output as JSON
      --jq <EXPR>              Filter JSON output with jq expression (implies --json)
      --pretty                 Human-friendly output with colors and formatting
      --compact                Compact output without colors (overrides TTY detection)
  -h, --help                   Print help
