crates/moss/tests/snapshots/cli_snapshots__help_rules_update.snap
---
source: crates/moss/tests/cli_snapshots.rs
assertion_line: 428
expression: "snapshot_help(&[\"rules\", \"update\"])"
---
Update imported rules from their sources

Usage: moss rules update [OPTIONS] [RULE_ID]

Arguments:
  [RULE_ID]  Specific rule ID to update (updates all if omitted)

Options:
      --json       Output as JSON
      --jq <EXPR>  Filter JSON output with jq expression (implies --json)
      --pretty     Human-friendly output with colors and formatting
      --compact    Compact output without colors (overrides TTY detection)
  -h, --help       Print help
